objects/Showing__c.object
<CustomObject>
    <fields>
        <fullName>Concatenated_Name__c</fullName>
        <formula>Text(Date__c)+if(ISBLANK(Date__c),&apos;&apos;,&apos; &apos;)+Text(Start_Time__c)+if(ISBLANK(Date__c),&apos;&apos;,&apos; &apos;)+ Feature__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concatenated Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>Feature__c</referenceTo>
        <relationshipLabel>Showings</relationshipLabel>
        <relationshipName>ShowingFeature</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Genre__c</fullName>
        <label>Primary Genre</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Screen_Number__c</fullName>
        <label>Screen Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tickets_Sold__c</fullName>
        <label>Tickets Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Showing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Showing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Showings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Showing_Date_Vaildation</fullName>
        <active>true</active>
        <description>Showing date validation</description>
        <errorConditionFormula>Date__c &gt; Feature__r.Release_Date__c</errorConditionFormula>
        <errorMessage>Showing date should not be earlier feature’s release date.</errorMessage>
    </validationRules>
</CustomObject>